<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading data from the Google Books API</string>
    <string name="search">Search</string>
    <string name="title_activity_book_detail">BookDetail</string>

    <!--Hints-->
    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author</string>
    <string name="hint_Publisher">Insert Publisher</string>
    <string name="hint_Isbn">Insert ISBN</string>
    <string name="no_search_data">Please insert valid search terms</string>
</resources>
