<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_marginStart="@dimen/standard_dimension_size"
        android:layout_marginEnd="@dimen/margin_search_activity"
        android:hint="@string/hint_title"/>

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_marginStart="@dimen/standard_dimension_size"
        android:layout_marginEnd="@dimen/standard_dimension_size"
        android:hint="@string/hint_author"/>

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_marginStart="@dimen/standard_dimension_size"
        android:layout_marginEnd="@dimen/standard_dimension_size"
        android:hint="@string/hint_Publisher"/>

    <EditText
        android:id="@+id/etISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_marginStart="@dimen/standard_dimension_size"
        android:layout_marginEnd="@dimen/standard_dimension_size"
        android:hint="@string/hint_Isbn"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_gravity="center"
        android:background="@drawable/search_button_shape"
        android:textSize="@dimen/search_button_text_size"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"/>
</LinearLayout>